--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <div class="personal-stack-top">
         <div class="personal-stack-p">
           <p>"兴趣是最好的老师，特别喜欢计算机，就是现在，纵然有环境配置让我煎熬过四天还未成功的经历，但那又如何。
-            算法初学者，特别有趣，接触算法的时间都好像在加速，但真的很难啊！前端刚入门，从0-1的过程也很难，但我走得还行，写过三款微信小程序大多数只是静态前端页面，还有很多等待学习！让我们相信女程序员超级无敌了不起，girls
+            算法初学者，特别有趣，学习算法时候感觉时间流逝得特别快，但真的很难啊！前端刚入门，从0-1的过程也很难，但我走得还行，写过三款微信小程序大多数只是静态前端页面，还有很多等待学习！让我们相信女程序员超级无敌了不起，girls
             let's do anything we want to do！"</p>
           </p>
         </div>
@@ -94,13 +94,60 @@
     <div class="media">
       <div class="media-title">
         <h2 class="media-title1">媒体</h2>
-        <span class="media-title2">联系我,一起交流学习！</span>
+        <span class="media-title2">一起交流学习呀呀呀呀！</span>
       </div>
+
       <div class="media-content">
         <div class="media-item">
-          <img src="">
-          <button></button>
+          <img class="media-item-img" src="static/forestgirl.jpg">
+          <div class="media-item-con">
+            <h2 class="media-h">Github</h2>
+            <p class="media-p">Siannn</p>
+            <a href="https://github.com/Siannnn" target="_blank">
+              <button class="media-button">到达</button>
+            </a>
+          </div>
         </div>
+        <div class="media-item">
+          <img class="media-item-img" src="static/forestgirl.jpg">
+          <div class="media-item-con">
+            <h2 class="media-h">博客园</h2>
+            <p class="media-p">博客园日记性博主</p>
+            <a href="https://www.cnblogs.com/skybornethief-lunaworld" target="_blank">
+              <button class="media-button">到达</button>
+           </a>
+          </div>
+        </div>
+        <div class="media-item">
+          <img class="media-item-img" src="static/forestgirl.jpg">
+          <div class="media-item-con">
+            <h2 class="media-h">CSDN</h2>
+            <p class="media-p">Skybornethief</p>
+            <a href="https://blog.csdn.net/2303_79931170?spm=1000.2115.3001.5343" target="_blank">
+              <button class="media-button">到达</button>
+            </a>
+          </div>
+        </div>
+        <div class="media-item">
+          <img  class="media-item-img" src="static/forestgirl.jpg">
+          <div class="media-item-con">
+            <h2 class="media-h">小红书</h2>
+            <p class="media-p">一只特的code旅行</p>
+            <a href="https://www.xiaohongshu.com/user/profile/615ac4ff000000000201991f" target="_blank">
+              <button class="media-button">到达</button>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="blog">
+      <div class="blog-content">
+        <p></p>
+        <h2></h2>
+      </div>
+      <div>
+
       </div>
     </div>
   </body>
