--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <a href="" class="nav-item">
            首页
           </a>
-          <a href="" class="nav-item">
+          <a href="javascript:heoWeb.scrollTo('媒体');" class="nav-item">
             媒体
           </a>
           <a href="" class="nav-item">
@@ -112,7 +112,7 @@
           <img class="media-item-img" src="static/forestgirl.jpg">
           <div class="media-item-con">
             <h2 class="media-h">博客园</h2>
-            <p class="media-p">博客园日记性博主</p>
+            <p class="media-p">低产日记性博主</p>
             <a href="https://www.cnblogs.com/skybornethief-lunaworld" target="_blank">
               <button class="media-button">到达</button>
            </a>
@@ -141,14 +141,38 @@
       </div>
     </div>
 
-    <div class="blog">
+    <!-- <div class="blog">
       <div class="blog-content">
         <p></p>
         <h2></h2>
       </div>
-      <div>
+    <div> -->
 
       </div>
     </div>
+
+  <div class="imgs-t">
+    <div class="imgs-title">
+        <h2 class="imgs-title1">爱拍照</h2>
+        <span class="imgs-title2">小小尼康s600和华为p60</span>
+      </div>
+  
+    <div class="imgs">
+      <div class="panel active" style="background-image:url('static/DSCN0423.JPG')">
+        <h3>张掖travel-七彩丹霞</h3>
+      </div>
+      <div class="panel" style="background-image:url('static/DSCN0288.JPG')">
+        <h3>张掖travel-大雪山</h3>
+      </div>
+      <div class="panel" style="background-image:url('static/DSCN0443.JPG')">
+        <h3>张掖travel-金塔寺</h3>
+      </div>
+      <div class="panel" style="background-image:url('static/DSCN0446.JPG')">
+        <h3>张掖travel-石窟</h3>
+      </div>
+    </div>
+  </div>
   </body>
+  <script src="script.js"></script>
+  <script src="/js/main.js"></script>
 </html>
