--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="first-stack-left">
         <div class="title-group">
           <p>Hi!&#128512;</p>
-          <span>I'm SUN TIAN TIAN</span>
+          <span>I'm Suvn Tanio</span>
           <span>Siann</span>
         </div>
         <div>
